--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,9 @@
 <html>
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <!-- <script type="text/javascript" src="bundle.js"></script> -->
 
   <title>Solar Clock</title>
-</head>
-
-<body>
-  <form id="solar-form">
-    <label for="age">Enter a number:</label>
-    <input id="age" type="number">
-    <button type="submit">Submit</button>
-  </form>
-  <ul id="solution"></ul>
-</body>
-
-</html>
+  <p>test page</p>
+  <!-- front end -->
